--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: Terraform
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform Deployment'
+    name: Terraform Deployment
     runs-on: ubuntu-latest
     environment: dev
 
@@ -19,42 +19,31 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZ_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZ_TENANT_ID }}
 
+    defaults:
+      run:
+        working-directory: ./terraform
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Terraform Format
-        uses: hashicorp/terraform-github-actions@v2.0.3
+      - name: Setup Terraform CLI
+        uses: hashicorp/setup-terraform@v3
         with:
-          tf_actions_version: 1.5.7
-          tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: './terrform'
+          terraform_version: 1.5.7
+
+      - name: Terraform Format Check
+        run: terraform fmt -check
 
       - name: Terraform Init
-        uses: hashicorp/terraform-github-actions@v2.0.3
-        with:
-          tf_actions_version: 1.5.7
-          tf_actions_subcommand: 'init'
-          tf_actions_working_dir: './terrform'
+        run: terraform init
 
       - name: Terraform Validate
-        uses: hashicorp/terraform-github-actions@v2.0.3
-        with:
-          tf_actions_version: 1.5.7
-          tf_actions_subcommand: 'validate'
-          tf_actions_working_dir: './terrform'
+        run: terraform validate
 
       - name: Terraform Plan
-        uses: hashicorp/terraform-github-actions@v2.0.3
-        with:
-          tf_actions_version: 1.5.7
-          tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: './terrform'
+        run: terraform plan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master'
-        uses: hashicorp/terraform-github-actions@v2.0.3
-        with:
-          tf_actions_version: 1.5.7
-          tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: './terrform'
+        run: terraform apply -auto-approve
